--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=Cinzel:900|Montserrat|Rubik+Mono+One');
+
+
+body{
+	color: #dbdada;
+	font-family: "Montserrat";
+	
+	background-color: #1f1f1f;
+
+}
+
+
 /********NAVBAR********/
-
+.navbar{
+	text-transform: uppercase;
+	font-family: "Rubik Mono One";
+	
+	
+	
+}
 .navbar-dark {
-	background-color: #000000 !important;
+	background-color: #1f1f1f !important;
 }
-
-
-@media (min-width:768px) {
-	
-    .navbar-static-top {position:fixed;top:0;right:0;left:0;}
-	
-}
-
-
