--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,32 @@ body{
 .navbar-dark {
 	background-color: #1f1f1f !important;
 }
+
+/********LANDING-VIEW********/
+header{
+	background-image: url("../images/background/landing.jpg");
+	background-repeat: no-repeat;
+	background-position: bottom; /* experiment with different values for different resolutions */
+	
+	background-size: cover;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+
+	height: 100vh;
+	
+}
+
+header > h1 {
+	color: white;
+	font-size: 6.3em;
+	font-family: 'Cinzel';
+	font-weight: bold;
+
+	text-shadow: 2px 2px 4px #555555;
+
+    position: absolute;
+    top:  50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
