--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,3 +87,31 @@ header > h1 {
 	padding-top: 25px;
 	padding-bottom: 50px;
 }
+
+/********ABOUT********/
+
+#about {
+	
+	background-color: #000000;
+	
+}
+
+#img-top {
+	padding: 0;
+}
+
+.about-container {
+	
+	
+}
+
+/********PHOTO********/
+
+#photo {
+	background: #000000;
+}
+#photo > img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
