--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,10 +110,10 @@ header > h1 {
 #photo {
 	background: #000000;
 }
-#photo > img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+
+.carousel-inner img {
+	width: 100%;
+	height: 100%;
 }
 
 /********ALBUMS********/
