--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,6 @@ header > h1 {
 #about {
 	
 	background-color: #000000;
-	
 }
 
 #img-top {
@@ -113,11 +112,54 @@ header > h1 {
 	
 	
 }
+/* Read more... link */
+.about-link {
+	color: #dbdada;
+	text-decoration: none;
+}
+.about-link:hover {
+	color: #ffffff;
+	text-decoration: none;	
+}
+
+.modal-body {
+	background-color: black !important;
+}
+
+.modal-body > h5 {
+	font-weight: bold;
+}
+
+.modal-header {
+	background-color: black !important;
+}
+
+.modal-footer {
+	background-color: #000000;
+	border-top: 0 none;
+}
+
+/* modal close button */
+
+.modal-footer > .btn {
+	color: #dbdada;
+	background-color: #1f1f1f;
+	border-color: #9b9b9b;
+	border-radius: 5px;
+}
+
+.modal-footer > .btn:focus, .btn:hover{
+	background-color: #000000 !important;
+	border-color: #9b9b9b !important;
+	box-shadow:none !important;
+}
+
 
 /********PHOTO********/
 
 #photo {
 	background: #000000;
+	padding-top: 66px;
 }
 
 .carousel-inner img {
@@ -128,7 +170,7 @@ header > h1 {
 /********ALBUMS********/
 
 #albums {
-	background-image: url("../images/background/albums.jpg");
+	/* background-image: url("../images/background/albums.jpg");
 	background-repeat: no-repeat;
 	background-position: bottom;
 
@@ -136,11 +178,11 @@ header > h1 {
     -moz-background-size: cover;
     -o-background-size: cover;
 
+	
+	background-blend-mode: lighten; */
+	
+	background-color: #1f1f1f;
 	padding: 50px 0px 50px 0px;
-	background-color: grey;
-
-	background-blend-mode: lighten;
-
 }
 
 @media (max-width:768px) {
