--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,8 +187,19 @@ header > h1 {
 
 @media (max-width:768px) {
 	.col-sm-12 {
-		padding: 10px 50px 10px 50px;
+		padding: 0px 50px 30px 50px;
+	}
+}
 
+@media (min-width:769px) {
+	.col-md-6 {
+		padding-bottom: 30px;
+	}
+}
+
+@media (min-width:1200px) {
+	.col-lg-3 {
+		padding-bottom: 30px;
 	}
 }
 
