--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body{
 
 }
 
-h1 {
+h1, h3 {
 	text-align: center;
 	text-transform: uppercase;
 	font-family: 'Rubik Mono One'; 
@@ -253,8 +253,84 @@ header > h1 {
 	box-shadow:none !important;
 }
 
-/********FOLLOW********/
+/********NEWSLETTER********/
+#follow {
+	padding-bottom: 40px;
+}
 
+.newsletter > div {
+	padding-top: 15px;
+  }
+
+/* input field */
+input[type=email] {
+	margin-right: 15px;
+	border-radius: 0px !important;
+}
+
+::placeholder {
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+/* sign up button */
+button[type=submit] {
+	color: #ebebeb;
+	background-color: #7a7a7a !important;
+	border-color: #9b9b9b;
+	border-radius: 0px !important;
+
+	text-transform: uppercase;
+	
+	height: 38px;
+	font-size: 0.85em;
+	font-weight: bold;
+}
+button[type=submit]:hover {
+	background-color: #575757 !important;
+}
+
+button[type=submit]:focus {
+	background-color: #333333 !important;
+	border-color: #9b9b9b !important;
+	box-shadow:none !important;
+}
+
+@media(max-width:575px) {
+	::placeholder {
+		text-align: center;
+	}
+	input[type=email]{
+		margin-right: 0px;
+		width: 70vw;
+	}
+}
+
+@media(min-width:576px) and (max-width:767px) {
+	input[type=email]{
+		width: 350px !important;
+	}
+}
+
+@media(max-width:767px) {
+	.newsletter {
+		padding-bottom: 50px;
+	}
+}
+
+@media(max-width:575px) {
+	.form-group {
+		margin-bottom: 0px;
+	}
+}
+
+@media(min-width:992px) {
+	input[type=email]{
+		width: 350px !important;
+	}
+}
+
+/********FOOTER********/
 .icons a {
 	color: #7a7a7a;
 
