--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,6 +330,31 @@ button[type=submit]:focus {
 	}
 }
 
+/********CONTACT********/
+.contact > div{
+	padding-top: 15px;
+}
+
+h6{
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 0.9em;
+	/* font-family: ; */
+	
+}
+
+h6:nth-of-type(2) {
+	padding-top: 10px;
+}
+
+.contact a {
+	color: #dbdada;
+	/* text-decoration: none; */
+}
+.contact a:hover{
+	color:white;
+}
+
 /********FOOTER********/
 .icons a {
 	color: #7a7a7a;
