--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,13 +360,13 @@ h6:nth-of-type(2) {
 	color: #7a7a7a;
 
 	font-size: 40px;
-	padding-right: 20px;
+	margin-right: 15px;
 	
 	transition: all .5s ease;
 }
 
 .icons a:nth-child(3){
-	padding-right: 60px;
+	margin-right: 40px;
 }
 
 .icons a:hover {
@@ -376,13 +376,13 @@ h6:nth-of-type(2) {
 @media(max-width:461px){
 	.icons a{
 		font-size: 30px;
-		padding-right: 10px;
+		margin-right: 10px;
 	}
 	.icons a:nth-child(3){
-		padding-right: 25px;
+		margin-right: 25px;
 	}
 	.icons a:nth-child(6){
-		padding-right: 0px;
+		margin-right: 0px;
 	}
 }
 
