added a missing closing div tag, modified spotify player margins so that below 768px it doesn't make the entire page wider for some reason

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,10 +234,10 @@ header > h1 {
 	height: 100%;
 }
 
-@media(max-width:575px) {
-	#music .container {
-		padding-left: 0;
-		padding-right: 0;
+@media(max-width:767px) {
+	.embed-container {
+		margin-left: 6.9%;
+		margin-right: 6.9%;
 	}
 }
 
