--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,9 +119,12 @@ header > h1 {
 	
 	background-color: #000000;
 }
+@media(min-width:992px){
 
-#img-top {
-	padding: 0;
+	#img-top {
+		/* padding: 0; */
+		padding: 0 15% 0 15%;
+	}
 }
 
 .about-container {
