--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,11 @@ h1 {
 	}
 }
 
+.logo-middle:hover{
+	transition: transform .6s;
+	transform: scale(0.9);
+}
+
 /********LANDING-VIEW********/
 
 @media(max-width:1090px){
@@ -348,10 +353,11 @@ header > h1 {
 	box-shadow:none !important;
 }
 
-/********NEWSLETTER********/
+/********FOOTER********/
 #follow {
 	padding-bottom: 40px;
 }
+/********NEWSLETTER********/
 
 .newsletter > div {
 	padding-top: 15px;
@@ -450,7 +456,7 @@ h6:nth-of-type(2) {
 	color:white;
 }
 
-/********FOOTER********/
+/********ICONS********/
 .icons a {
 	color: #7a7a7a;
 
