--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,6 @@ h1 {
 .navbar{
 	text-transform: uppercase;
 	font-family: "Rubik Mono One";
-	
-	
-	
 }
 .navbar-dark {
 	background-color: #1f1f1f !important;
@@ -37,16 +34,20 @@ h1 {
 	.navbar-dark {
 		background-color: #ffffff00 !important;
 	}
-	a.nav-link {
-		
-	}
+
 	.logo-middle > img{
 		display: none;
+	}
+	.navbar .border-bottom{
+		border-bottom: 1px solid #dbdada !important
 	}
 }
 @media(min-width:768px) {
 	.logo-left > img{
 		display: none;
+	}
+	.navbar {
+		border-bottom: 1px solid #dbdada !important;
 	}
 }
 
@@ -222,6 +223,11 @@ header > h1 {
 	.albums > .col-lg-3 {
 		padding-bottom: 30px;
 	}
+}
+
+.album-cover > img {
+	border: 1px solid;
+	border-color: #474747;
 }
 
 /* display text on hover
