adjustments to the submit button; removed unnecessary code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,6 +404,7 @@ button[type=submit] {
 }
 button[type=submit]:hover {
 	background-color: #575757 !important;
+	border-color: #9b9b9b !important;
 }
 
 button[type=submit]:focus {
