--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,17 @@ h1, h3 {
 }
 
 h1 {
-	padding-bottom: 10px;
+	padding-bottom: 25px;
 }
+
+
+/* offsets the navbar covering the sections after clicking a section link */
+.anchor{
+	display: block;
+	position: relative;
+	top: -25px;
+	visibility: hidden;
+	}
 
 /********NAVBAR********/
 .navbar{
@@ -140,11 +149,10 @@ header > h1 {
 		padding: 0 15% 0 15%;
 	}
 }
-
-.about-container {
-	
-	
+.about-container h1{
+	margin-top: -50px;
 }
+
 /* Read more... link */
 .about-link {
 	color: #dbdada;
@@ -198,7 +206,7 @@ header > h1 {
 
 #photo {
 	background: #010705;
-	padding-top: 66px;
+	padding-top: 35px;
 }
 
 .carousel-inner img {
@@ -210,7 +218,7 @@ header > h1 {
 
 #music {
 	background-color: #1f1f1f;
-	padding: 66px 0px 0px 0px;
+	padding: 35px 0px 0px 0px;
 	background-image: url("../images/background/bg.jpg");
 	background-size: cover;
 }
@@ -316,13 +324,13 @@ header > h1 {
 }
 /********VIDEO********/
 #video{
-	padding-top: 66px;
+	padding-top: 35px;
 	background-color: #140F07;
 }
 
 /********TOUR********/
 #tour {
-	padding-top: 66px;
+	padding-top: 35px;
 	padding-bottom: 50px;
 	
 	text-transform: uppercase;
